--- a/config/locales/pl-PL-assemblies.yml
+++ b/config/locales/pl-PL-assemblies.yml
@@ -19,7 +19,7 @@ pl:
         creation_date: Data utworzenia
         decidim_area_id: Powierzchnia
         decidim_assemblies_type_id: Typ zespołu
-        decidim_scope_id: Zakres
+        decidim_scope_id: Obszar
         description: Opis
         developer_group: Grupa inicjatorów
         domain: Domena
@@ -42,8 +42,8 @@ pl:
         promoted: Wyróżniony
         published_at: Opublikowano
         purpose_of_action: Cel działania
-        scope_id: Zakres
-        scopes_enabled: Zakresy dozwolone
+        scope_id: Obszar
+        scopes_enabled: Obszary dozwolone
         short_description: Krótki opis
         show_statistics: Pokaż statystyki
         slug: URL slug
@@ -382,7 +382,7 @@ pl:
         read_less: Czytaj mniej
         read_more: Czytaj więcej
         related_participatory_processes: Powiązane procesy partycypacyjne
-        scope: Zakres
+        scope: Obszar
         social_networks: Portale społecznościowe
         social_networks_title: Odwiedź zespół na
         target: Do kogo kierowane
@@ -429,8 +429,8 @@ pl:
     help:
       participatory_spaces:
         assemblies:
-          contextual: "<p><strong>Zespół</strong> to grupa członków organizacji, którzy regularnie spotykają się, aby podejmować decyzje dotyczące określonej kategorii lub zakresu organizacji.</p> <p>Zespoły organizują spotkania, niektóre są prywatne, a niektóre otwarte. Jeśli są otwarte, można w nich uczestniczyć (na przykład: uczestniczyć, jeśli pozwala na to liczba dostępnych miejsc, dodawać punkty do porządku obrad lub komentować propozycje i decyzje podjęte przez ten organ).</p> <p>Przykłady: zgromadzenie ogólne (które spotyka się raz w roku w celu określenia głównych kierunków działania organizacji, a także jej organów wykonawczych w drodze głosowania), rada doradcza ds. Równości (która zbiera się co dwa miesiące w celu przedstawienia propozycji dotyczących poprawy stosunków między płciami w organizacji), komisje oceniające (które zbierają się co miesiąc w celu monitorowania procesu) lub organ gwarancyjny (który zbiera incydenty, nadużycia lub propozycje ulepszenia procedur decyzyjnych) to przykłady zespołów.</p>\n"
-          page: "<p><strong>Zespół</strong> to grupa członków organizacji, którzy regularnie spotykają się, aby podejmować decyzje dotyczące określonej kategorii lub zakresu organizacji.</p> <p>Zespoły organizują spotkania, niektóre są prywatne, a niektóre są otwarte. Jeśli są otwarte, można w nich uczestniczyć (na przykład: uczestniczyć, jeśli pozwala na to liczba dostępnych miejsc, dodawać punkty do porządku obrad lub komentować propozycje i decyzje podjęte przez ten organ).</p> <p>Przykłady: zgromadzenie ogólne (które spotyka się raz w roku w celu określenia głównych kierunków działania organizacji, a także jej organów wykonawczych w drodze głosowania), rada doradcza ds. Równości (która zbiera się co dwa miesiące w celu przedstawienia propozycji dotyczących poprawy stosunków między płciami w organizacji), komisje oceniające (które zbierają się co miesiąc w celu monitorowania procesu) lub organ gwarancyjny (który zbiera incydenty, nadużycia lub propozycje ulepszenia procedur decyzyjnych) to przykłady zespołów.</p>\n"
+          contextual: "<p><strong>Zespół</strong> to grupa członków organizacji, którzy regularnie spotykają się, aby podejmować decyzje dotyczące określonej kategorii lub obszaru organizacji.</p> <p>Zespoły organizują spotkania, niektóre są prywatne, a niektóre otwarte. Jeśli są otwarte, można w nich uczestniczyć (na przykład: uczestniczyć, jeśli pozwala na to liczba dostępnych miejsc, dodawać punkty do porządku obrad lub komentować propozycje i decyzje podjęte przez ten organ).</p> <p>Przykłady: zgromadzenie ogólne (które spotyka się raz w roku w celu określenia głównych kierunków działania organizacji, a także jej organów wykonawczych w drodze głosowania), rada doradcza ds. Równości (która zbiera się co dwa miesiące w celu przedstawienia propozycji dotyczących poprawy stosunków między płciami w organizacji), komisje oceniające (które zbierają się co miesiąc w celu monitorowania procesu) lub organ gwarancyjny (który zbiera incydenty, nadużycia lub propozycje ulepszenia procedur decyzyjnych) to przykłady zespołów.</p>\n"
+          page: "<p><strong>Zespół</strong> to grupa członków organizacji, którzy regularnie spotykają się, aby podejmować decyzje dotyczące określonej kategorii lub obszaru organizacji.</p> <p>Zespoły organizują spotkania, niektóre są prywatne, a niektóre są otwarte. Jeśli są otwarte, można w nich uczestniczyć (na przykład: uczestniczyć, jeśli pozwala na to liczba dostępnych miejsc, dodawać punkty do porządku obrad lub komentować propozycje i decyzje podjęte przez ten organ).</p> <p>Przykłady: zgromadzenie ogólne (które spotyka się raz w roku w celu określenia głównych kierunków działania organizacji, a także jej organów wykonawczych w drodze głosowania), rada doradcza ds. Równości (która zbiera się co dwa miesiące w celu przedstawienia propozycji dotyczących poprawy stosunków między płciami w organizacji), komisje oceniające (które zbierają się co miesiąc w celu monitorowania procesu) lub organ gwarancyjny (który zbiera incydenty, nadużycia lub propozycje ulepszenia procedur decyzyjnych) to przykłady zespołów.</p>\n"
           title: Czym są zespoły?
     log:
       value_types:
