--- a/config/locales/pl-PL-meetings.yml
+++ b/config/locales/pl-PL-meetings.yml
@@ -15,7 +15,7 @@ pl:
         address: Adres
         available_slots: Dostępne miejsca na to spotkanie
         decidim_category_id: Kategoria
-        decidim_scope_id: Zakres
+        decidim_scope_id: Obszar
         decidim_user_group_id: Grupa użytkowników
         description: Opis
         end_time: Czas zakończenia
@@ -94,8 +94,8 @@ pl:
             default_registration_terms: Domyślne warunki rejestracji
             enable_pads_creation: Włącz tworzenie padów
             resources_permissions_enabled: Uprawnienia działań można ustawić dla każdego spotkania
-            scope_id: Zakres
-            scopes_enabled: Zakresy włączone
+            scope_id: Obszar
+            scopes_enabled: Obszary włączone
           step:
             announcement: Ogłoszenie
             comments_blocked: Komentarze zablokowane
@@ -396,7 +396,7 @@ pl:
             citizens: Obywatele
             official: Oficjalny
             user_groups: Grupy
-          scope: Zakres
+          scope: Obszar
           search: Szukaj
         filters_small_view:
           close_modal: Zamknij okno
