--- a/config/locales/pl-PL-verifications.yml
+++ b/config/locales/pl-PL-verifications.yml
@@ -148,7 +148,7 @@ pl:
             few: 'Udział jest ograniczony do użytkowników, którzy mają jeden z następujących kodów pocztowych: %{postal_codes}.'
             many: 'Udział jest ograniczony do użytkowników posiadających jeden z następujących kodów pocztowych: %{postal_codes}.'
             other: 'Udział jest ograniczony do użytkowników, którzy mają jeden z następujących kodów pocztowych: %{postal_codes}.'
-          scope: Uczestnictwo jest ograniczone do uczestników z zakresu %{scope_name}.
+          scope: Uczestnictwo jest ograniczone do uczestników z obszaru %{scope_name}.
       id_documents:
         admin:
           config:
