trello card: 190 - changes in process card

--- a/decidim-processes-extended/config/locales/pl.yml
+++ b/decidim-processes-extended/config/locales/pl.yml
@@ -1,6 +1,8 @@
 pl:
   activemodel:
     attributes:
+      common:
+        scope: Obszar
       participatory_process:
         contact_address: Adres
         contact_email: Adres e-mail
